# openmi

./: .gitignore  CMakeLists.txt  array_test.cc  build.sh
openmi/: CMakeLists.txt
openmi/core/: accumulate_n_functor.h  accumulate_n_op.cc  add_op.cc.old  add_op.h.old  algorithm.cc  algorithm.h  assign_op.h  attr_value.h  attr_value_utils.h  binary_element_wise_op.cc  binary_element_wise_op.h  binary_mul_op.cc  binary_sigmoid_grad_op.cc  cwise_ops_binary.cc  cwise_ops_binary.h  cwise_ops_binary_functor.h  cwise_ops_binary_gradients.h  cwise_ops_unary.cc  cwise_ops_unary.h  cwise_ops_unary_functor.h  cwise_ops_unary_gradients.h  executor.cc  executor.cc.stable  executor.h  executor.h.stable  gradient_op_registry.cc  gradient_op_registry.h  gradient_registry.cc  gradient_registry.h  gradients.cc  graph.cc  graph.h  graph_constructor.cc  graph_utils.cc  graph_utils.h  local_device.cc  local_device.h  loss_op.h  math_grad_constructor.cc  matmul_grad_op.cc  (+36 more)
openmi/core.stable/framework/: executor.cc  gradients.h  graph.h  node.cc  node_manager.cc  op.cc  op.h  op_kernel.cc  op_kernel.h  tensor.cc  tensor.h  tensor_shape.cc  types.h
openmi/core.stable/graph/: graph.h
openmi/core.stable/kernels/: eigen_unary_op.h
openmi/core.stable/lib/: build.sh  status.cc  status_test.cc
openmi/core.stable/new/: CMakeLists.txt
openmi/core.stable/new/core/framework/: op_define_builder.cc
openmi/core.stable/ops/: add_op.cc  add_op.h  oneslike_op.cc  placeholder_op.cc  sigmoid_op.cc  sigmoid_op.h
openmi/core/common_runtime/: eigen_thread_pool.h  local_device.cc  local_device.h
openmi/core/distribute_runtime/: distribute_connector.cc  distribute_connector.h  thrift_client_wrapper.h  thrift_server_wrapper.h
openmi/core/engine/: model_parser.h  model_ps.h  model_worker.h  nn_structure.h  ps_accessor.h  ps_interactor.cc  ps_interactor.h  ps_sharding.cc  ps_sharding.h  session.cc  session.h
openmi/core/framework/: attr_value.cc  attr_value.h  attr_value_utils.h  device.h  device_registry.cc  device_registry.h  eigen_thread_pool.h  executor.cc  executor.h  gradient_registry.cc  gradient_registry.h  gradients.cc  gradients.h  math_grad_constructor.cc  node.h  node_manager.cc  node_manager.h  op.cc  op.h  op_factory.cc  op_factory.h  op_kernel.cc  op_kernel.h  op_registry.cc  op_registry.h  session_state.h  tensor.cc  tensor.h  tensor_buffer.h  tensor_shape.cc  tensor_shape.h  tensor_types.h  tensor_utils.h
openmi/core/graph/: algorithm.cc  algorithm.h  graph.cc  graph.h  graph_constructor.cc  graph_constructor.h  graph_utils.cc  graph_utils.h
openmi/core/lib/: status.h
openmi/core/new/core/framework/: op_define_builder.h
openmi/core/ops/: accumulate_n_op.cc  assign_op.cc  assign_op.h  binary_add_op.cc  binary_div_op.cc  binary_mul_op.cc  binary_sub_op.cc  concat_op.cc  cross_entropy_op_functor.h  cwise_ops_binary.h  cwise_ops_binary_functor.h  embedding_lookup.cc  matmul_op.cc  multiply_op.cc  multiply_op.h  no_gradient_op.cc  no_gradient_op.h  nothing_op.cc  nothing_op.h  numeric_op.h  oneslike_op.cc  oneslike_op.h  placeholder_op.h  reduce_sum_op.cc  reduce_sum_op.h  register_ops.cc  segment_op.cc  segment_op.h  sigmoid_grad_op.cc  sigmoid_grad_op.h  sigmoid_op.cc  slice_op.cc  softmax_cross_entropy_with_logits_op.cc  softmax_op.cc  softmax_op_functor.h  variable_op.cc  variable_op.h  zeroslike_op.cc  zeroslike_op.h
unittest/: CMakeLists.txt  autodiff_test.cc  class_test.cc  core_common_runtime_local_device_test.cc  core_engine_wide_and_deep_executor_test.cc  core_framework_executor_test.cc  core_framework_executor_test.cc.stable  core_framework_gradient_op_registry_test.cc  core_framework_gradient_registry_test.cc  core_framework_gradients_test.cc  core_framework_graph_constructor_test.cc  core_framework_node_manager_test.cc  core_framework_op_registry_test.cc  core_framework_op_test.cc  core_framework_session_state_test.cc  core_framework_tensor_buffer_test.cc  core_framework_tensor_shape_test.cc  core_framework_tensor_test.cc  core_framework_types_test.cc  core_ops_cwise_ops_binary_test.cc  core_ops_embedding_lookup_test.cc  core_ops_softmax_cross_entropy_with_logits_op_functor_test.cc  core_ops_softmax_op_functor_test.cc  engine_proto_internal_vallist_test.cc  idl_proto_graph_def_test.cc  op_test  op_test.cc  sarray_test.cc  tensor_util.h  types.h  variable_test  variable_test.cc
unittest/conf/: graph_demo.conf  graph_demo.conf.stable  logistic_regression.graph  lr_graph_demo.conf  pb_node_list.graph  wide_and_deep_graph_demo.conf  wide_and_deep_graph_demo_dev.conf
